# comptime-rs

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
examples/: Cargo.toml
examples/src/: main.rs
src/: comptime_impl.rs  lib.rs
tests/: Cargo.toml  integration.rs
tests/src/: lib.rs  main.rs
