[package]
name = "comptime"
version = "0.1.1"
authors = ["Nick Hynes <nhynes@nhynes.com>", "Zoe Soutter <zoe@soutter.com>"]
edition = "2018"
description = "Compile-time code execution (i.e. lightweight proc-macro)"
readme = "README.md"
repository = "https://github.com/nhynes/comptime-rs"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
